...
    static func addObserversToClaimVote(cell: ClaimVoteCell, delegate: ClaimVC) {
        cell.slider.removeTarget(delegate, action: nil, for: .valueChanged)
        cell.slider.addTarget(delegate, action: #selector(ClaimVC.sliderMoved), for: .valueChanged)
    }
    
    static func populateImageGallery(cell: ImageGalleryCell, with claim: ClaimEntityLarge) {
        cell.accessibilityIdentifier = "imageGalleryCell"
        let imageURLStrings = claim.basic.largePhotos.map { URLBuilder().urlString(string: $0) }
        log("\(imageURLStrings)", type: .info)
        service.dao.freshKey { key in
            let modifier = AnyModifier { request in
                var request = request
                request.addValue("\(key.timestamp)", forHTTPHeaderField: "t")
...
