...
    var socket: SocketService? { return service.socket }
    
    // MARK: Lifecycle
    
    override func viewDidLoad() {
        super.viewDidLoad()
        collectionView.accessibilityIdentifier = "UniversalChatCollectionView"
        addGradientNavBar()
        addTopButtons()
        setMuteButtonImage(type: dataSource.notificationsType)
        setPinButtonImage()
        setViewMarksButtons()
        setupCollectionView()
...
