...
                                        <connections>
                                            <action selector="tapNextButton" destination="Fpj-WI-Qkt" eventType="touchUpInside" id="i4f-2j-ELw"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xgl-A7-H88">
                                        <rect key="frame" x="0.0" y="60" width="343" height="27"/>
                                        <accessibility key="accessibilityConfiguration" identifier="tryDemo"/>
                                        <fontDescription key="fontDescription" name="AkkuratPro-Bold" family="Akkurat Pro" pointSize="12"/>
                                        <state key="normal" title="Button">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
                                        <connections>
                                            <action selector="tapQRCode:" destination="Fpj-WI-Qkt" eventType="touchUpInside" id="VgZ-IM-o5q"/>
...
